+ Task save prompt before creating or opening task and closing application if current task was modified. * Translation updates.

--- a/resources/tspsg.qrc
+++ b/resources/tspsg.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="/images" >
+    <file>qtlogo-64.png</file>
     <file>About.bmp</file>
     <file>Icon.png</file>
     <file>Settings.png</file>
