--- a/ui/settingsdialog.ce.ui
+++ b/ui/settingsdialog.ce.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="../resources/tspsg.qrc">
-    <normaloff>:/images/Settings.png</normaloff>:/images/Settings.png</iconset>
+    <normaloff>:/images/icons/preferences_system.png</normaloff>:/images/icons/preferences_system.png</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <property name="spacing">
@@ -206,7 +206,7 @@
           </property>
           <property name="icon">
            <iconset resource="../resources/tspsg.qrc">
-            <normaloff>:/images/buttons/buttons/Color.png</normaloff>:/images/buttons/buttons/Color.png</iconset>
+            <normaloff>:/images/icons/color_line.png</normaloff>:/images/icons/color_line.png</iconset>
           </property>
          </widget>
         </item>
@@ -223,7 +223,7 @@
           </property>
           <property name="icon">
            <iconset resource="../resources/tspsg.qrc">
-            <normaloff>:/images/buttons/buttons/Font.png</normaloff>:/images/buttons/buttons/Font.png</iconset>
+            <normaloff>:/images/icons/fonts.png</normaloff>:/images/icons/fonts.png</iconset>
           </property>
          </widget>
         </item>
@@ -294,7 +294,7 @@
        </property>
        <property name="icon">
         <iconset resource="../resources/tspsg.qrc">
-         <normaloff>:/images/buttons/buttons/Help.png</normaloff>:/images/buttons/buttons/Help.png</iconset>
+         <normaloff>:/images/icons/help_hint.png</normaloff>:/images/icons/help_hint.png</iconset>
        </property>
        <property name="autoRaise">
         <bool>true</bool>
@@ -327,7 +327,7 @@
        </property>
        <property name="icon">
         <iconset resource="../resources/tspsg.qrc">
-         <normaloff>:/images/buttons/buttons/OK.png</normaloff>:/images/buttons/buttons/OK.png</iconset>
+         <normaloff>:/images/icons/button_ok.png</normaloff>:/images/icons/button_ok.png</iconset>
        </property>
        <property name="default">
         <bool>true</bool>
@@ -347,7 +347,7 @@
        </property>
        <property name="icon">
         <iconset resource="../resources/tspsg.qrc">
-         <normaloff>:/images/buttons/buttons/Critical.png</normaloff>:/images/buttons/buttons/Critical.png</iconset>
+         <normaloff>:/images/icons/button_cancel.png</normaloff>:/images/icons/button_cancel.png</iconset>
        </property>
       </widget>
      </item>
