--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -153,6 +153,10 @@
             <property name="text">
              <string>Random</string>
             </property>
+            <property name="icon">
+             <iconset resource="../resources/tspsg.qrc">
+              <normaloff>:/images/icons/roll.png</normaloff>:/images/icons/roll.png</iconset>
+            </property>
            </widget>
           </item>
           <item>
@@ -168,7 +172,7 @@
             </property>
             <property name="icon">
              <iconset resource="../resources/tspsg.qrc">
-              <normaloff>:/images/buttons/buttons/OK.png</normaloff>:/images/buttons/buttons/OK.png</iconset>
+              <normaloff>:/images/icons/button_ok.png</normaloff>:/images/icons/button_ok.png</iconset>
             </property>
            </widget>
           </item>
@@ -241,7 +245,7 @@
      </property>
      <property name="icon">
       <iconset resource="../resources/tspsg.qrc">
-       <normaloff>:/images/buttons/buttons/Save.png</normaloff>:/images/buttons/buttons/Save.png</iconset>
+       <normaloff>:/images/icons/filesaveas.png</normaloff>:/images/icons/filesaveas.png</iconset>
      </property>
      <addaction name="actionFileSaveTask"/>
      <addaction name="separator"/>
@@ -275,7 +279,7 @@
      </property>
      <property name="icon">
       <iconset resource="../resources/tspsg.qrc">
-       <normaloff>:/images/buttons/buttons/Web.png</normaloff>:/images/buttons/buttons/Web.png</iconset>
+       <normaloff>:/images/icons/locale.png</normaloff>:/images/icons/locale.png</iconset>
      </property>
      <addaction name="actionSettingsLanguageAutodetect"/>
      <addaction name="separator"/>
@@ -304,12 +308,6 @@
    <property name="cursor">
     <cursorShape>ArrowCursor</cursorShape>
    </property>
-   <property name="iconSize">
-    <size>
-     <width>17</width>
-     <height>18</height>
-    </size>
-   </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
@@ -328,7 +326,7 @@
   <action name="actionFilePrintSetup">
    <property name="icon">
     <iconset resource="../resources/tspsg.qrc">
-     <normaloff>:/images/buttons/buttons/PrintSetup.png</normaloff>:/images/buttons/buttons/PrintSetup.png</iconset>
+     <normaloff>:/images/icons/fileprint.png</normaloff>:/images/icons/fileprint.png</iconset>
    </property>
    <property name="text">
     <string>P&amp;rint setup...</string>
@@ -343,7 +341,7 @@
    </property>
    <property name="icon">
     <iconset resource="../resources/tspsg.qrc">
-     <normaloff>:/images/buttons/buttons/Print.png</normaloff>:/images/buttons/buttons/Print.png</iconset>
+     <normaloff>:/images/icons/fileprint.png</normaloff>:/images/icons/fileprint.png</iconset>
    </property>
    <property name="text">
     <string>&amp;Print...</string>
@@ -400,7 +398,7 @@
   <action name="actionFileNew">
    <property name="icon">
     <iconset resource="../resources/tspsg.qrc">
-     <normaloff>:/images/buttons/buttons/Document.png</normaloff>:/images/buttons/buttons/Document.png</iconset>
+     <normaloff>:/images/icons/filenew.png</normaloff>:/images/icons/filenew.png</iconset>
    </property>
    <property name="text">
     <string>&amp;New</string>
@@ -421,7 +419,7 @@
   <action name="actionFileOpen">
    <property name="icon">
     <iconset resource="../resources/tspsg.qrc">
-     <normaloff>:/images/buttons/buttons/OpenFolder.png</normaloff>:/images/buttons/buttons/OpenFolder.png</iconset>
+     <normaloff>:/images/icons/fileopen.png</normaloff>:/images/icons/fileopen.png</iconset>
    </property>
    <property name="text">
     <string>&amp;Open...</string>
@@ -442,7 +440,7 @@
   <action name="actionSettingsPreferences">
    <property name="icon">
     <iconset resource="../resources/tspsg.qrc">
-     <normaloff>:/images/buttons/buttons/Properties.png</normaloff>:/images/buttons/buttons/Properties.png</iconset>
+     <normaloff>:/images/icons/preferences_system.png</normaloff>:/images/icons/preferences_system.png</iconset>
    </property>
    <property name="text">
     <string>&amp;Preferences...</string>
@@ -460,7 +458,7 @@
    </property>
    <property name="icon">
     <iconset resource="../resources/tspsg.qrc">
-     <normaloff>:/images/buttons/buttons/book_open.png</normaloff>:/images/buttons/buttons/book_open.png</iconset>
+     <normaloff>:/images/icons/contents.png</normaloff>:/images/icons/contents.png</iconset>
    </property>
    <property name="text">
     <string>&amp;Contents</string>
@@ -475,10 +473,10 @@
    </property>
    <property name="icon">
     <iconset resource="../resources/tspsg.qrc">
-     <normaloff>:/images/buttons/buttons/Help.png</normaloff>:/images/buttons/buttons/Help.png</iconset>
+     <normaloff>:/images/icons/help_browser.png</normaloff>:/images/icons/help_browser.png</iconset>
    </property>
    <property name="text">
-    <string>&amp;Context help</string>
+    <string>Context &amp;Help</string>
    </property>
    <property name="statusTip">
     <string>Open context help</string>
@@ -487,7 +485,7 @@
   <action name="actionHelpAbout">
    <property name="icon">
     <iconset resource="../resources/tspsg.qrc">
-     <normaloff>:/images/buttons/buttons/infoBubble.png</normaloff>:/images/buttons/buttons/infoBubble.png</iconset>
+     <normaloff>:/images/icons/help_about.png</normaloff>:/images/icons/help_about.png</iconset>
    </property>
    <property name="text">
     <string>&amp;About...</string>
@@ -502,7 +500,7 @@
   <action name="actionFileExit">
    <property name="icon">
     <iconset resource="../resources/tspsg.qrc">
-     <normaloff>:/images/buttons/buttons/NoAction.png</normaloff>:/images/buttons/buttons/NoAction.png</iconset>
+     <normaloff>:/images/icons/exit.png</normaloff>:/images/icons/exit.png</iconset>
    </property>
    <property name="text">
     <string>E&amp;xit</string>
@@ -514,7 +512,7 @@
   <action name="actionFileSaveTask">
    <property name="icon">
     <iconset resource="../resources/tspsg.qrc">
-     <normaloff>:/images/buttons/buttons/Save.png</normaloff>:/images/buttons/buttons/Save.png</iconset>
+     <normaloff>:/images/icons/filesaveas.png</normaloff>:/images/icons/filesaveas.png</iconset>
    </property>
    <property name="text">
     <string>&amp;Task...</string>
@@ -566,7 +564,7 @@
    </property>
    <property name="icon">
     <iconset resource="../resources/tspsg.qrc">
-     <normaloff>:/images/buttons/buttons/Save.png</normaloff>:/images/buttons/buttons/Save.png</iconset>
+     <normaloff>:/images/icons/filesave.png</normaloff>:/images/icons/filesave.png</iconset>
    </property>
    <property name="text">
     <string>&amp;Save</string>
