+ Added README file. * Very minor ui and translation changes.

--- a/ui/mainwindow.ce.ui
+++ b/ui/mainwindow.ce.ui
@@ -246,7 +246,7 @@
      <x>0</x>
      <y>0</y>
      <width>234</width>
-     <height>22</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -263,7 +263,7 @@
       <string/>
      </property>
      <property name="title">
-      <string>Save &amp;as...</string>
+      <string>Save &amp;As...</string>
      </property>
      <property name="icon">
       <iconset resource="../resources/tspsg.qrc">
@@ -334,7 +334,7 @@
    </attribute>
    <addaction name="actionFileNew"/>
    <addaction name="actionFileOpen"/>
-   <addaction name="actionFileSaveTask"/>
+   <addaction name="actionFileSave"/>
    <addaction name="separator"/>
    <addaction name="actionSettingsPreferences"/>
    <addaction name="separator"/>
@@ -345,7 +345,7 @@
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Solution st&amp;eps</string>
+    <string>Solution S&amp;teps</string>
    </property>
    <property name="toolTip">
     <string>Save solution steps</string>
@@ -359,7 +359,7 @@
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Solution &amp;graph</string>
+    <string>Solution &amp;Graph</string>
    </property>
    <property name="toolTip">
     <string>Save solution graph</string>
