--- a/resources/tspsg.qrc
+++ b/resources/tspsg.qrc
@@ -1,6 +1,5 @@
 <RCC>
     <qresource prefix="/images" >
-        <file>qtlogo-64.png</file>
         <file>About.bmp</file>
         <file>Icon.png</file>
         <file>Settings.png</file>
@@ -22,6 +21,7 @@
         <file>icons/help_hint.png</file>
         <file>icons/locale.png</file>
         <file>icons/preferences_system.png</file>
+        <file>icons/qtlogo-64.png</file>
         <file>icons/roll.png</file>
     </qresource>
 </RCC>
