--- a/resources/tspsg.qrc
+++ b/resources/tspsg.qrc
@@ -1,9 +1,7 @@
 <RCC>
     <qresource prefix="/images" >
-        <file>About.bmp</file>
-        <file>Icon.png</file>
-        <file>Settings.png</file>
-        <file>Task.bmp</file>
+        <file>about.bmp</file>
+        <file>icon.png</file>
         <file>icons/button_cancel.png</file>
         <file>icons/button_ok.png</file>
         <file>icons/color_line.png</file>
