+ Current file name is displayed in main application window header. * Created a method for prompt for unsaved changes to unify it throughout the code. * Some stylistic README changes.

--- a/ui/mainwindow.ce.ui
+++ b/ui/mainwindow.ce.ui
@@ -14,11 +14,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Travelling salesman problem[*]</string>
+   <string>Travelling Salesman Problem[*]</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../resources/tspsg.qrc">
-    <normaloff>:/images/Icon.png</normaloff>:/images/Icon.png</iconset>
+    <normaloff>:/images/icon.png</normaloff>:/images/icon.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTabWidget" name="tabWidget">
