--- a/resources/tspsg.qrc
+++ b/resources/tspsg.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/images" >
         <file>about.bmp</file>
         <file>icon.png</file>
+        <file>icons/back.png</file>
         <file>icons/button_cancel.png</file>
         <file>icons/button_ok.png</file>
         <file>icons/color_line.png</file>
