--- a/ui/mainwindow.ce.ui
+++ b/ui/mainwindow.ce.ui
@@ -9,12 +9,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>225</width>
-    <height>322</height>
+    <width>247</width>
+    <height>339</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Travelling Salesman Problem[*]</string>
+   <string>Travelling Salesman Problem</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../resources/tspsg.qrc">
@@ -29,8 +29,8 @@
      <rect>
       <x>9</x>
       <y>9</y>
-      <width>207</width>
-      <height>248</height>
+      <width>221</width>
+      <height>261</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -111,9 +111,6 @@
           </property>
           <property name="minimum">
            <number>3</number>
-          </property>
-          <property name="maximum">
-           <number>5</number>
           </property>
           <property name="value">
            <number>5</number>
@@ -219,6 +216,60 @@
         </property>
        </widget>
       </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="QPushButton" name="buttonSaveSolution">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="cursor">
+           <cursorShape>PointingHandCursor</cursorShape>
+          </property>
+          <property name="statusTip">
+           <string>Save solution to a file</string>
+          </property>
+          <property name="text">
+           <string>Save Solution</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../resources/tspsg.qrc">
+            <normaloff>:/images/icons/filesaveas.png</normaloff>:/images/icons/filesaveas.png</iconset>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="buttonBackToTask">
+          <property name="cursor">
+           <cursorShape>PointingHandCursor</cursorShape>
+          </property>
+          <property name="statusTip">
+           <string>Go back to Task tab</string>
+          </property>
+          <property name="text">
+           <string>Back to Task</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../resources/tspsg.qrc">
+            <normaloff>:/images/icons/back.png</normaloff>:/images/icons/back.png</iconset>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
      </layout>
     </widget>
    </widget>
@@ -228,7 +279,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>225</width>
+     <width>247</width>
      <height>22</height>
     </rect>
    </property>
@@ -246,7 +297,7 @@
       <string/>
      </property>
      <property name="title">
-      <string>Save &amp;As...</string>
+      <string>Save &amp;As</string>
      </property>
      <property name="icon">
       <iconset resource="../resources/tspsg.qrc">
@@ -362,7 +413,7 @@
     <string>Save solution</string>
    </property>
    <property name="statusTip">
-    <string>Save solution steps and graph</string>
+    <string>Save solution to a file</string>
    </property>
   </action>
   <action name="actionFileNew">
@@ -436,6 +487,9 @@
    <property name="statusTip">
     <string>Open help contents</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+F1</string>
+   </property>
   </action>
   <action name="actionHelpContextual">
    <property name="enabled">
@@ -450,6 +504,9 @@
    </property>
    <property name="statusTip">
     <string>Open context help</string>
+   </property>
+   <property name="shortcut">
+    <string>F1</string>
    </property>
   </action>
   <action name="actionHelpAbout">
@@ -496,9 +553,6 @@
    <property name="statusTip">
     <string>Save task to file</string>
    </property>
-   <property name="shortcut">
-    <string>Ctrl+S</string>
-   </property>
   </action>
   <action name="actionSettingsLanguageAutodetect">
    <property name="checkable">
@@ -525,16 +579,13 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string notr="true">English</string>
+    <string notr="true">&amp;English</string>
    </property>
    <property name="iconText">
     <string notr="true">English</string>
    </property>
   </action>
   <action name="actionFileSave">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
    <property name="icon">
     <iconset resource="../resources/tspsg.qrc">
      <normaloff>:/images/icons/filesave.png</normaloff>:/images/icons/filesave.png</iconset>
@@ -547,6 +598,9 @@
    </property>
    <property name="statusTip">
     <string>Save current task</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
    </property>
   </action>
   <action name="actionHelpAboutQt">
@@ -585,6 +639,22 @@
     <hint type="destinationlabel">
      <x>251</x>
      <y>229</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonBackToTask</sender>
+   <signal>clicked()</signal>
+   <receiver>actionFileSaveAsSolution</receiver>
+   <slot>trigger()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>172</x>
+     <y>299</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>-1</x>
+     <y>-1</y>
     </hint>
    </hints>
   </connection>
