--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>491</width>
-    <height>400</height>
+    <width>502</width>
+    <height>407</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,8 +23,8 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>481</width>
-      <height>311</height>
+      <width>287</width>
+      <height>298</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -99,9 +99,6 @@
           </property>
           <property name="minimum">
            <number>3</number>
-          </property>
-          <property name="maximum">
-           <number>5</number>
           </property>
           <property name="value">
            <number>5</number>
@@ -207,6 +204,60 @@
         </property>
        </widget>
       </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="QPushButton" name="buttonSaveSolution">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="cursor">
+           <cursorShape>PointingHandCursor</cursorShape>
+          </property>
+          <property name="statusTip">
+           <string>Save solution to a file</string>
+          </property>
+          <property name="text">
+           <string>Save Solution</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../resources/tspsg.qrc">
+            <normaloff>:/images/icons/filesaveas.png</normaloff>:/images/icons/filesaveas.png</iconset>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="buttonBackToTask">
+          <property name="cursor">
+           <cursorShape>PointingHandCursor</cursorShape>
+          </property>
+          <property name="statusTip">
+           <string>Go back to Task tab</string>
+          </property>
+          <property name="text">
+           <string>Back to Task</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../resources/tspsg.qrc">
+            <normaloff>:/images/icons/back.png</normaloff>:/images/icons/back.png</iconset>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
      </layout>
     </widget>
    </widget>
@@ -216,7 +267,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>491</width>
+     <width>502</width>
      <height>22</height>
     </rect>
    </property>
@@ -231,7 +282,7 @@
     </property>
     <widget class="QMenu" name="menuFileSaveAs">
      <property name="title">
-      <string>Save &amp;As...</string>
+      <string>Save &amp;As</string>
      </property>
      <property name="icon">
       <iconset resource="../resources/tspsg.qrc">
@@ -378,11 +429,14 @@
    <property name="text">
     <string>&amp;Solution...</string>
    </property>
+   <property name="iconText">
+    <string>Solution...</string>
+   </property>
    <property name="toolTip">
     <string>Save solution</string>
    </property>
    <property name="statusTip">
-    <string>Save solution steps and graph</string>
+    <string>Save solution to a file</string>
    </property>
   </action>
   <action name="actionFileNew">
@@ -456,6 +510,9 @@
    <property name="statusTip">
     <string>Open help contents</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+F1</string>
+   </property>
   </action>
   <action name="actionHelpContextual">
    <property name="enabled">
@@ -470,6 +527,9 @@
    </property>
    <property name="statusTip">
     <string>Open context help</string>
+   </property>
+   <property name="shortcut">
+    <string>F1</string>
    </property>
   </action>
   <action name="actionHelpAbout">
@@ -512,9 +572,6 @@
    <property name="statusTip">
     <string>Save task to file</string>
    </property>
-   <property name="shortcut">
-    <string>Ctrl+S</string>
-   </property>
   </action>
   <action name="actionSettingsLanguageAutodetect">
    <property name="checkable">
@@ -541,16 +598,13 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string notr="true">English</string>
+    <string notr="true">&amp;English</string>
    </property>
    <property name="iconText">
     <string notr="true">English</string>
    </property>
   </action>
   <action name="actionFileSave">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
    <property name="icon">
     <iconset resource="../resources/tspsg.qrc">
      <normaloff>:/images/icons/filesave.png</normaloff>:/images/icons/filesave.png</iconset>
@@ -566,6 +620,9 @@
    </property>
    <property name="statusTip">
     <string>Save current task</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
    </property>
   </action>
   <action name="actionHelpAboutQt">
@@ -601,6 +658,22 @@
     <hint type="destinationlabel">
      <x>294</x>
      <y>229</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonSaveSolution</sender>
+   <signal>clicked()</signal>
+   <receiver>actionFileSaveAsSolution</receiver>
+   <slot>trigger()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>58</x>
+     <y>327</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>-1</x>
+     <y>-1</y>
     </hint>
    </hints>
   </connection>
