--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -6,15 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>502</width>
-    <height>407</height>
+    <width>344</width>
+    <height>381</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Travelling Salesman Problem</string>
   </property>
   <property name="windowIcon">
-   <iconset>
+   <iconset resource="../resources/tspsg.qrc">
     <normaloff>:/images/icon.png</normaloff>:/images/icon.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -32,6 +32,9 @@
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
+    </property>
+    <property name="tabPosition">
+     <enum>QTabWidget::North</enum>
     </property>
     <property name="currentIndex">
      <number>0</number>
@@ -267,7 +270,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>502</width>
+     <width>344</width>
      <height>22</height>
     </rect>
    </property>
@@ -295,9 +298,6 @@
     <addaction name="actionFileOpen"/>
     <addaction name="actionFileSave"/>
     <addaction name="menuFileSaveAs"/>
-    <addaction name="separator"/>
-    <addaction name="actionFilePrintPreview"/>
-    <addaction name="actionFilePrint"/>
     <addaction name="separator"/>
     <addaction name="actionFileExit"/>
    </widget>
@@ -341,10 +341,12 @@
    <addaction name="menuSettings"/>
    <addaction name="menuHelp"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
    <property name="cursor">
     <cursorShape>ArrowCursor</cursorShape>
+   </property>
+   <property name="windowTitle">
+    <string>Toolbar</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -356,7 +358,6 @@
    <addaction name="actionFileOpen"/>
    <addaction name="actionFileSave"/>
    <addaction name="separator"/>
-   <addaction name="actionFilePrint"/>
    <addaction name="actionSettingsPreferences"/>
    <addaction name="separator"/>
    <addaction name="actionFileExit"/>
@@ -404,34 +405,6 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+P</string>
-   </property>
-  </action>
-  <action name="actionFileSaveSolutionMatrices">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
-   <property name="text">
-    <string>Solution S&amp;teps</string>
-   </property>
-   <property name="toolTip">
-    <string>Save solution steps</string>
-   </property>
-   <property name="statusTip">
-    <string>Save solution steps only</string>
-   </property>
-  </action>
-  <action name="actionFileSaveSolutionGraph">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
-   <property name="text">
-    <string>Solution &amp;Graph</string>
-   </property>
-   <property name="toolTip">
-    <string>Save solution graph</string>
-   </property>
-   <property name="statusTip">
-    <string>Save solution graph only</string>
    </property>
   </action>
   <action name="actionFileSaveAsSolution">
